# build

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .gitslave  Dockerfile.dev  README.md  TODO.md  build.py  build.sh  building-llvm.md  building-psu-pdg.md  environment_setup.md  getting-started.md  install.py  preprocessor-design.md  setup.py  vscode.md
.github/workflows/: cicd-develop.yml  cicd-eop1.yml  cicd-master.yml  docker-image.yml  docker-upload.yml  learning_actions.yml  main.yml  pytests.yml
apps/: Makefile
apps/6month-demo/: .gitignore  Makefile  flow.txt  gma.h  green.cpp  green_ownship.cpp  green_rpc.cpp  hal_gma.h  hal_xdcomms.h  initenv.sh  observer.h  orange.cpp  orange_ownship.cpp  orange_rpc.cpp  orange_target.cpp  ownship.h  pnt_example.cpp  rpc.h  sensors.h  target.h  targets.make  (+2 more)
apps/eop1/delighter/MA_v1.0_src/ImageDetector/: CMakeLists.txt  ImageDetector.cpp  ImageDetector.h  RunImageDetector.cpp
apps/eop1/delighter/MA_v1.0_src/ImageDetector/config/: defaultConfig.json
apps/eop1/delighter/MA_v1.0_src/ImageReceiver/: CMakeLists.txt  ImageReceiver.cpp  ImageReceiver.h  RunImageReceiver.cpp
apps/eop1/timing/MA_v1.0_src/EOIR/: Blob.cpp  CMakeLists.txt  EOIR-timing.csv  EOIR.cpp  GAPS_openCV_Manager.h
apps/eop1/timing/MA_v1.0_src/EOIR/config/: defaultConfig.json  fly-low.json
apps/eop1/timing2/MA_v1.0_src/Echoer/: CMakeLists.txt  Echoer.cpp  Echoer.h  RunEchoer.cpp
apps/eop1/timing2/MA_v1.0_src/Sender/: CMakeLists.txt  RunSender.cpp  Sender.cpp  Sender.h  timings.csv
apps/eop1/timing2/MA_v1.0_src/Sender/config/: defaultConfig.json
doc/: README.md  building-llvm.md  building-psu-pdg.md  getting-started.md  markdown-cheatsheet.md  vscode.md
mission_app/: .gitignore  Makefile  mapp.conf  mission  mission.c  mission_libs.c  produce.c  produce.h  send_recv.c  send_recv.h  terms.txt  track.h
ngc/: .gitignore  Makefile  gma.h  green  green.cpp  green_ownship.cpp  green_rpc.cpp  green_target.cpp  observer.h  orange.cpp  orange_ownship.cpp  orange_rpc.cpp  orange_target.cpp  ownship.cpp  ownship.h  pnt_example.cpp  rpc.cpp  rpc.h  sensors.h  target.cpp  target.h  xdcomms.h
scripts/: install_closure.sh
(+956 files in other folders)
